<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.dashboard.DashboardView">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/dashboard_fragment_appbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/dashboard_fragment_colapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    app:contentScrim="@color/appBar"
                    android:background="@color/appBar"
                    app:layout_scrollFlags="scroll"
                    app:expandedTitleGravity="center">

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/dashboard_fragment_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/appBar"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
                </androidx.appcompat.widget.Toolbar>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:src="@drawable/logo_appbar"
                        android:adjustViewBounds="true"
                        android:layout_gravity="center"
                        app:layout_collapseMode="parallax"
                />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <LinearLayout
                    android:id="@+id/dashboard_fragment_search_container"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/appBar">

                <androidx.cardview.widget.CardView
                        android:id="@+id/dashboard_fragment_search_cardview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="5dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:transitionName="search_bar">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white">

                        <ImageView
                                android:id="@+id/dashboard_fragment_logo"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:transitionName="event_image"
                                android:adjustViewBounds="true"
                                android:src="@drawable/ic_search"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:background="@color/white"
                                android:tint="@color/appBar"
                        />
                        <TextView
                                android:layout_width="0dp"
                                android:layout_height="30dp"
                                android:text="@string/search2"
                                android:textSize="22sp"
                                android:gravity="bottom|start"
                                android:layout_gravity="center_vertical"
                                app:layout_constraintStart_toEndOf="@id/dashboard_fragment_logo"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:background="@color/white"
                                android:textColor="@color/appBar"
                                android:layout_marginStart="5dp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ProgressBar
                        android:id="@+id/dashboard_fragment_progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        android:layout_marginTop="100dp"
                        android:layout_centerHorizontal="true"
                        />
                <LinearLayout
                        android:id="@+id/dashboard_fragment_events_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:paddingTop="8dp">
                    <TextView android:layout_width="match_parent"
                              android:layout_height="30dp"
                              android:text="@string/this_weekend"
                              android:paddingStart="8dp"
                              android:textSize="20sp"
                              android:textColor="@color/white"/>
                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/dashboard_fragment_events_this_weekend"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                    </androidx.recyclerview.widget.RecyclerView>
                    <TextView android:layout_width="match_parent"
                              android:layout_height="30dp"
                              android:text="@string/in_your_city"
                              android:paddingStart="8dp"
                              android:textSize="20sp"
                            android:textColor="@color/white"/>
                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/dashboard_fragment_events_in_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp">
                    </androidx.recyclerview.widget.RecyclerView>
                    <TextView android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:text="@string/discover"
                            android:paddingStart="8dp"
                            android:textSize="20sp"
                            android:textColor="@color/white"/>
                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/dashboard_fragment_discover_events"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp">
                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>