...
                                android:src="@drawable/ic_arrow_back"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                                android:id="@+id/event_details_favourite"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginEnd="16dp"
                                android:background="@drawable/favourite_button_selector"
                                android:clickable="true"
                                app:layout_constraintBottom_toBottomOf="parent"
...
                                    app:layout_constraintHorizontal_bias="0.5"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/event_details_image"
                                    app:layout_constraintVertical_bias="0.0">

                                <com.google.android.material.button.MaterialButton
                                        android:id="@+id/event_details_buy"
                                        android:layout_width="120dp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/buy"
                                        android:textColor="@color/white"
                                        app:backgroundTint="@color/buy_sell_tint_selector"
...
                                        app:layout_constraintStart_toStartOf="@+id/event_details_buyers"
                                        app:layout_constraintTop_toBottomOf="@+id/event_details_buyers"
                                        app:strokeColor="@color/white"
                                        app:strokeWidth="1dp" />

                                <com.google.android.material.button.MaterialButton
                                        android:id="@+id/event_details_sell"
                                        android:layout_width="120dp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/sell"
                                        android:textColor="@color/white"
                                        app:backgroundTint="@color/buy_sell_tint_selector"
...
